--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,5 @@ compile_commands.json
 
 # QtCreator local machine specific files for imported projects
 *creator.user*
+consolidated_source.txt
+consolidated_source_ln.txt
