--- a/.gitignore
+++ b/.gitignore
@@ -50,5 +50,4 @@ compile_commands.json
 
 # QtCreator local machine specific files for imported projects
 *creator.user*
-consolidated_source.txt
-consolidated_source_ln.txt
+consolidated_sourc*.txt
